# e_store

./: .gitignore  Makefile  alembic.ini  ecommerce.db  pyproject.toml  pyrightconfig.json
Default Folder/.stfolder/: syncthing-folder-37a8ee.txt
app/: main.py  schemas.py
app/backend/: db.py  db_depends.py
app/migrations/: env.py
app/migrations/versions/: 15b62c3c3c5a_initial_migration.py  513b74f4438a_create_review_model_and_rating_model.py  74b0aaca7ca5_.py  7b34db627f19_add_supplier_id_to_products.py  9078e299e0a6_initial_migration.py  aa701786b9b8_create_user_model.py  b7293f9802ad_create_review_model_and_rating_model.py  d14f02e7643d_try_with_from_app_import_models_no_.py
app/models/: __init__.py  category.py  products.py  rating.py  review.py  user.py
app/routers/: auth.py  category.py  permission.py  products.py  reviews.py
tests/: category_test.py  conftest.py
